home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector: {}
  template:
    spec:
      volumes:
        - name: ha-config-root
          emptyDir: {}
      containers:
        - name: home-assistant-app
          image: "ghcr.io/home-assistant/home-assistant:2025.6.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: null
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          resources: {}
          livenessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: ha-config-root
              mountPath: /config
      restartPolicy: Always
