home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  updateStrategy:
    type: OnDelete
  selector: {}
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "hass-static-net",
            "mac": "02:10:00:fa:01:02",
            "ips": [
              "10.0.0.62/24",
              "2a02:810d:bd90:bd00::62/64",
              "fd00:10::62/64"
            ]
          }]
    spec:
      terminationGracePeriodSeconds: 60
      nodeSelector:
        # needed, BT usb
        kubernetes.io/hostname: k3s-1
      volumes:
        - name: ha-config
          persistentVolumeClaim:
            claimName: ha-config
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: dbus
          hostPath:
            path: /var/run/dbus/system_bus_socket
            type: Socket
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: Always
          volumeMounts:
            - name: ha-config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: dbus
              mountPath: /var/run/dbus/system_bus_socket
          ports:
            - containerPort: 8123
              name: http
          securityContext:
            privileged: true
